# builder_derive_more

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: pre-commit.yml  rust.yml
src/: lib.rs
